name:                Green
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            Adventures in Haskell
-- description:         
homepage:            https://github.com/Hypoon/Green
-- license:             
-- license-file:        LICENSE
author:              Hypoon
maintainer:          futurehypoon@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- Extra files to be distributed with the package, such as examples or a README.
-- extra-source-files:  
cabal-version:       >=1.10

executable green
  main-is:             Client.hs
  ghc-options:         -threaded -with-rtsopts=-N
  build-depends:       base >=4.8 && <4.9 , mtl , time , network
  hs-source-dirs:      src
  default-language:    Haskell2010

executable greenss
  main-is:             StateServer.hs
  ghc-options:         -threaded -with-rtsopts=-N
  build-depends:       base >=4.8 && <4.9 , network , reflex , async , transformers , mtl , dependent-sum
  hs-source-dirs:      src
  default-language:    Haskell2010

executable greencs
  main-is:             CommServer.hs
  ghc-options:         -threaded -with-rtsopts=-N
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
